codama-syn-helpers/tests-macros/tests/as_path_list/from_path_value.fail.stderr
error: expected a list: `foo = (...)`
 --> tests/as_path_list/from_path_value.fail.rs:3:22
  |
3 | #[as_path_list(foo = bar(1, 2, 3))]
  |                      ^^^^^^^^^^^^
